cabal-version: 3.0
version: 1.0
license: MIT
name: advent
build-type: Simple

common shared
  default-language: Haskell2010
  build-depends:
      base >= 4.13 && < 5
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wpartial-fields
    -Wno-unused-do-bind

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Advent.Solution
    Advent.Year2020.Day01
    Advent.Year2020.Day02
    Advent.Year2020.Day03
    Advent.Year2020.Day04
    Advent.Year2020.Day05
    Advent.Year2020.Day06
    Advent.Year2020.Day07
    Advent.Year2020.Day08
    Advent.Year2020.Day09
    Advent.Year2020.Day10
    Advent.Year2020.Day11
    Advent.Year2020.Day12
    Advent.Year2020.Day13
    Advent.Year2020.Day14
    Advent.Year2020.Day15
    Advent.Year2020.Day16
    Advent.Year2020.Day17
    Advent.Year2020.Day18
    Advent.Year2020.Day19
    Advent.Year2020.Day20
    Advent.Year2020.Day21
    Advent.Year2020.Day22
    Advent.Year2020.Day23
    Advent.Year2020.Day24
    Advent.Year2020.Day25

library runner
  import: shared
  hs-source-dirs: runner
  build-depends:
      directory
    , optparse-applicative
    , parsec
    , template-haskell
  exposed-modules:
    Advent.Runner.CLI
    Advent.Runner.TH
    Advent.Runner.Types

executable advent
  import: shared
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      advent
    , advent:runner
    , clock
    , deepseq
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
