cabal-version: 3.0
version: 1.0
license: MIT
name: advent
build-type: Simple

common shared
  default-language: Haskell2010
  build-depends:
      base >= 4.13 && < 5
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wpartial-fields
    -Wno-unused-do-bind

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    -- solutions

library runner
  import: shared
  hs-source-dirs: runner
  build-depends:
      directory
    , optparse-applicative
    , parsec
    , template-haskell
  exposed-modules:
    Advent.Runner.CLI
    Advent.Runner.TH
    Advent.Runner.Types

executable advent
  import: shared
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      advent
    , advent:runner
    , clock
    , deepseq
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
